animation images: avoid layout shift
see:
https://www.smashingmagazine.com/2020/03/setting-height-width-images-important-again/

--- a/src/sass/explore4.scss
+++ b/src/sass/explore4.scss
@@ -43,6 +43,8 @@
         visibility var(--explore-images-timing);
       margin: 0;
       width: 90%;
+      height: auto;
+      aspect-ratio: attr(width) / attr(height);
       align-self: center;
       @include mobile-landscape() {
         width: 100%;
@@ -170,14 +172,6 @@
         @include mobile-landscape() {
           left: 8vw;
         }
-        // @include mobile-portrait() {
-        //   flex-direction: column;
-        //   justify-content: flex-start;
-        // }
-        //
-        // @include mobile-landscape() {
-        //   left: 8vw;
-        // }
 
         .about-container {
           width: 22vw;
@@ -267,11 +261,10 @@
 
           @include mobile-portrait() {
             top: 30vh;
+            height: 90vw;
             left: 0;
             width: 100%;
-            height: 90vw;
-            margin-top: 0%;
-
+            margin-top: 0;
             padding: 0;
             img.spyglass-photo {
               width: 80%;
